// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorObserver Snapshot ErrorObserver 1`] = `
<Text>
  Hello
</Text>
`;

exports[`ErrorObserver Snapshot ErrorObserver after complete rendering 1`] = `
<Text>
  Hello
</Text>
`;

exports[`ErrorObserver Snapshot ErrorObserver after complete rendering with child as function 1`] = `
<Text>
  Hello
</Text>
`;

exports[`ErrorObserver Snapshot ErrorObserver after complete rendering with error 1`] = `
<Text>
  Error
</Text>
`;

exports[`ErrorObserver should catch an error when thrown by a child component 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "500",
        },
        Object {
          "marginBottom": 8,
          "textAlign": "center",
        },
      ]
    }
  >
    Error
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": undefined,
          "fontSize": 14,
          "fontWeight": "400",
        },
        Object {
          "marginBottom": 8,
          "textAlign": "center",
        },
      ]
    }
  >
    💥 Boom!
  </Text>
</View>
`;

exports[`ErrorObserver should catch an error when thrown null by a child component 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "500",
        },
        Object {
          "marginBottom": 8,
          "textAlign": "center",
        },
      ]
    }
  >
    Error
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": undefined,
          "fontSize": 14,
          "fontWeight": "400",
        },
        Object {
          "marginBottom": 8,
          "textAlign": "center",
        },
      ]
    }
  >
    An unknown error occured.
  </Text>
</View>
`;

exports[`ErrorObserver should not catch an error because check error is null 1`] = `
<Text>
  Hello
</Text>
`;
